@@ -8,6 +8,8 @@ version 1.7.2, in progress
   automatically-created files
 - Fix bug 1861010
 - Rationalize frequency plot dialog
+- Add Help item to forecast dialog
+- Fixes for matrix "dot operations"
 
 12/25/2007 version 1.7.1
 - Add documentation for "set stopwatch"
